fix(): Fixed typo for facist to fascist and added game names
